<resources>
    <string name="app_name">Quick Response Barcode</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quick_response">Quick Response</string>
    <string name="fullname">Fullname: </string>
    <string name="login">Login</string>
    <string name="school_name">School Name</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="pin">Pin</string>
    <string name="id_number">ID Number</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="date">Date</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="student_profile">Student Profile</string>
</resources>