<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".actrivities.CreateAccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center|left"
        android:layout_height="?attr/actionBarSize">
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/buttonback"
            android:layout_margin="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Create Student Account"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_gravity="center"
        android:layout_height="220dp"
        app:srcCompat="@drawable/ic_group_18"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="text"
            android:padding="10dp"
            android:id="@+id/inputFirstname"
            android:background="@drawable/input_bg"
            android:hint="@string/first_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:id="@+id/inputMiddleName"
            android:background="@drawable/input_bg"
            android:hint="@string/middle_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:id="@+id/inputLastname"
            android:inputType="text"
            android:padding="10dp"
            android:background="@drawable/input_bg"
            android:hint="@string/last_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:padding="10dp"
            android:id="@+id/inputIDNumber"
            android:background="@drawable/input_bg"
            android:hint="@string/id_number"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="numberPassword"
            android:id="@+id/inputPin"
            android:padding="10dp"
            android:maxLength="4"
            android:background="@drawable/input_bg"
            android:hint="@string/pin"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/buttonCreate"
        android:text="@string/create"
        app:cornerRadius="10dp"/>

</LinearLayout>