<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bottom_sheet_bg"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Profile"
        android:padding="10dp"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <EditText
            android:id="@+id/inputIDNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:enabled="false"
            android:hint="@string/id_number"
            android:background="@drawable/input_bg"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/inputFirstname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:background="@drawable/input_bg"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/inputMiddleName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/middle_name"
            android:inputType="text"
            android:background="@drawable/input_bg"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/inputLastname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:background="@drawable/input_bg"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/inputPin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/pin"
            android:inputType="numberPassword"
            android:background="@drawable/input_bg"
            android:padding="10dp"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:text="Save"
            android:backgroundTint="#4CAF50" />
    </LinearLayout>

</LinearLayout>