<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".actrivities.StudentProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageStudentQr"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textFullname"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:fontFamily="@font/poppins"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textIdNumber"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/id_number"
                android:layout_margin="5dp"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/buttonShareQr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Qr"/>

                <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="#4CAF50"
                    android:text="Edit" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerviewHistory"/>

</LinearLayout>