<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".actrivities.DashBoardActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/imageSchoolLogo"
                android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_margin="5dp"
                    android:id="@+id/textSchoolName"
                    android:fontFamily="@font/poppins"
                    android:textSize="18sp"
                    android:text="@string/school_name"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/purple_700"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:background="@drawable/rounded">
        <TextView
            android:id="@+id/textDate"
            android:text="@string/date"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:columnCount="2"
            android:rowCount="2">
            <com.google.android.material.card.MaterialCardView
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:id="@+id/cardScan"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_columnWeight="1"
                android:backgroundTint="#91C6EE"
                android:layout_rowWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_scan"
                        android:layout_height="80dp"/>
                    <TextView
                        android:text="Scan"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/buttonCreateAccount"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:backgroundTint="#91C6EE"
                android:layout_rowWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_person_add_24"
                        android:layout_height="80dp"/>
                    <TextView
                        android:text="@string/create_account"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:id="@+id/buttonHistory"
                android:focusable="true"
                android:layout_columnWeight="1"
                android:backgroundTint="#91C6EE"
                android:layout_rowWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"

                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_person_search_24"
                        android:layout_height="80dp"/>
                    <TextView
                        android:text="@string/student_profile"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:id="@+id/cardSettings"
                android:focusable="true"
                android:layout_columnWeight="1"
                android:backgroundTint="#91C6EE"
                android:layout_rowWeight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_group_36638"
                        android:layout_height="80dp"/>
                    <TextView
                        android:text="Logout"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </GridLayout>

    </LinearLayout>






</LinearLayout>